--- a/hw4/css/style.css
+++ b/hw4/css/style.css
@@ -77,11 +77,12 @@ li p:nth-child(4):hover {
   height: 16px;
 }
 
-#account-form__checkbox {
-  height: 30px;
+#account-form__checkbox input[type="checkbox"] {
+  /* height: 30px;
   width: 30px;
   -moz-box-shadow: 0px 0px 16px 0px rgba(34, 60, 80, 0.52);
-  box-shadow: 0px 0px 16px 0px rgba(34, 60, 80, 0.52);
+  box-shadow: 0px 0px 16px 0px rgba(34, 60, 80, 0.52); */
+  text-decoration: none;
 }
 
 .account-form button {
