Added lesson7 & hw7

--- a/lesson 6/css/style.css
+++ b/lesson 6/css/style.css
@@ -20,10 +20,14 @@
 .flex-item {
   border: 2px solid #ff0000;
   background-color: #0000ff;
-  width: 200px;
+  /* width: 200px; */
   height: 200px;
-  margin-bottom: 30px;
-  background: chocolate url(./../img/spongebob_PNG32.png) center center
-    no-repeat;
+  flex: 3 2 100px;
+  /* margin-bottom: 30px; */
+  background: chocolate url(./../img/spongebob_PNG32.png) center center no-repeat;
   background-size: contain;
+}
+
+.flex-item:nth-child(3) {
+  flex: 2 3 50px;
 }
